fixed some issues, added swagger info, enhanced controllers, added joi schemas
