# swagger.json
@@ -165,7 +165,7 @@
     },
     "/api/user/water-intake": {
       "post": {
-        "tags": ["Stats"],
+        "tags": ["Stats", "Water-intake"],
         "summary": "Add water consumption info",
         "parameters": [],
         "requestBody": {
@@ -225,6 +225,110 @@
           },
           "404": {
             "description": "Not found. User has no such records that may be reset on that date",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/api/user/food-intake": {
+      "post": {
+        "tags": ["Stats", "Food-intake"],
+        "summary": "Add food intake info",
+        "parameters":[],
+        "requestBody": {
+          "description": "addFoodIntake object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddFoodIntakeRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddFoodIntakeResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (email or password is wrong)",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/api/user/food-intake/{id}": {
+      "put": {
+        "tags": ["Stats", "Food-intake"],
+        "summary": "pdate food intake entry by id",
+        "parameters":[
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "id of the food intake entry to be updated",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "addFoodIntake object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateFoodIntakeRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateFoodIntakeSuccessResponse"
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateFoodIntakeResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (email or password is wrong)",
             "content": {}
           },
           "500": {
@@ -410,7 +514,7 @@
         "properties": {
           "waterIntake": {
             "type": "number",
-            "description": "waterIntake value in mL",
+            "description": "water-intake value in ml. Number may be both decimal and integer, but must be positive",
             "example": 1000
           }
         }
@@ -418,10 +522,253 @@
       "AddWaterIntakeResponse": {
         "type": "object",
         "properties": {
+          "message": {
+            "type": "string",
+            "description": "success message",
+            "example": "water intake increased by 500 ml"
+          },
           "waterIntake": {
             "type": "number",
             "description": "waterIntake value in mL after update",
             "example": 2000
+          }
+        }
+      },
+      "AddFoodIntakeRequest": {
+        "type": "object",
+        "required":["carbohidrates", "protein", "fat", "dish", "type"],
+        "properties": {
+          "carbohidrates": {
+            "type": "number",
+            "description": "amount of carbohidrates in respective product",
+            "example": 140
+          },
+          "protein": {
+            "type": "number",
+            "description": "amount of protein in respective product",
+            "example": 30
+          },
+          "fat": {
+            "type": "number",
+            "description": "amount of fat in respective product",
+            "example": 50
+          },
+          "dish": {
+            "type": "string",
+            "description": "name of the dish",
+            "example": "Avocado"
+          },
+          "type": {
+            "type": "string",
+            "description": "food intake type",
+            "example": "breakfast"
+          }
+        }
+      },
+      "AddFoodIntakeResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "success message",
+            "example": "Food intake successfuly added"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "breakfast": {
+                "type": "object",
+                "properties": {
+                  "carbohidrates": {
+                    "type": "number",
+                    "description": "amount of carbohidrates in respective product",
+                    "example": 140
+                  },
+                  "protein": {
+                    "type": "number",
+                    "description": "amount of protein in respective product",
+                    "example": 30
+                  },
+                  "fat": {
+                    "type": "number",
+                    "description": "amount of fat in respective product",
+                    "example": 50
+                  },
+                  "dish": {
+                    "type": "string",
+                    "description": "name of the dish",
+                    "example": "Avocado"
+                  },
+                  "_id": {
+                    "type": "string",
+                    "description": "food intake obect id"
+                  }
+                }
+              },
+              "dinner": {
+                "type": "array",
+                "items": {
+                  "properties": {
+                    "carbohidrates": {
+                      "type": "number",
+                      "description": "amount of carbohidrates in respective product",
+                      "example": 140
+                    },
+                    "protein": {
+                      "type": "number",
+                      "description": "amount of protein in respective product",
+                      "example": 30
+                    },
+                    "fat": {
+                      "type": "number",
+                      "description": "amount of fat in respective product",
+                      "example": 50
+                    },
+                    "dish": {
+                      "type": "string",
+                      "description": "name of the dish",
+                      "example": "Avocado"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "description": "food intake obect id"
+                    }
+                  }
+                }
+              },
+              "lunch": {
+                "type": "array",
+                "items": {
+                  "properties": {
+                    "carbohidrates": {
+                      "type": "number",
+                      "description": "amount of carbohidrates in respective product",
+                      "example": 140
+                    },
+                    "protein": {
+                      "type": "number",
+                      "description": "amount of protein in respective product",
+                      "example": 30
+                    },
+                    "fat": {
+                      "type": "number",
+                      "description": "amount of fat in respective product",
+                      "example": 50
+                    },
+                    "dish": {
+                      "type": "string",
+                      "description": "name of the dish",
+                      "example": "Avocado"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "description": "food intake obect id"
+                    }
+                  }
+                }
+              },
+              "snack": {
+                "type": "array",
+                "items": {
+                  "properties": {
+                    "carbohidrates": {
+                      "type": "number",
+                      "description": "amount of carbohidrates in respective product",
+                      "example": 140
+                    },
+                    "protein": {
+                      "type": "number",
+                      "description": "amount of protein in respective product",
+                      "example": 30
+                    },
+                    "fat": {
+                      "type": "number",
+                      "description": "amount of fat in respective product",
+                      "example": 50
+                    },
+                    "dish": {
+                      "type": "string",
+                      "description": "name of the dish",
+                      "example": "Avocado"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "description": "food intake obect id"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "UpdateFoodIntakeRequest": {
+        "type": "object",
+        "required":["carbohidrates", "protein", "fat", "dish", "type"],
+        "properties": {
+          "carbohidrates": {
+            "type": "number",
+            "description": "amount of carbohidrates in respective product",
+            "example": 140
+          },
+          "protein": {
+            "type": "number",
+            "description": "amount of protein in respective product",
+            "example": 30
+          },
+          "fat": {
+            "type": "number",
+            "description": "amount of fat in respective product",
+            "example": 50
+          },
+          "dish": {
+            "type": "string",
+            "description": "name of the dish",
+            "example": "Avocado"
+          },
+          "type": {
+            "type": "string",
+            "description": "food intake type",
+            "example": "breakfast"
+          }
+        }
+      },
+      "UpdateFoodIntakeResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "success message",
+            "example": "Food intake successfuly added"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "carbohidrates": {
+                "type": "number",
+                "description": "amount of carbohidrates in respective product",
+                "example": 140
+              },
+              "protein": {
+                "type": "number",
+                "description": "amount of protein in respective product",
+                "example": 30
+              },
+              "fat": {
+                "type": "number",
+                "description": "amount of fat in respective product",
+                "example": 50
+              },
+              "dish": {
+                "type": "string",
+                "description": "name of the dish",
+                "example": "Avocado"
+              },
+              "_id": {
+                "type": "string",
+                "description": "food intake obect id"
+              }
+            }
           }
         }
       },
@@ -431,7 +778,7 @@
           "message": {
             "type": "string",
             "description": "success message",
-            "example": "waterIntake has been successfuly reset"
+            "example": "water intake stats has been successfuly reset"
           },
           "waterIntake": {
             "type": "number",
@@ -461,12 +808,9 @@
         "items": {
           "type": "object",
           "properties": {
-            "_id": {
-              "type": "string"
-            },
             "date": {
               "type": "string",
-              "format": "date"
+              "example": "2023-12-17"
             },
             "stats": {
               "type": "object",
@@ -474,31 +818,69 @@
                 "foodIntake": {
                   "type": "object",
                   "properties": {
-                    "carbohidrates": {
-                      "type": "number"
-                    },
-                    "protein": {
-                      "type": "number"
-                    },
-                    "fat": {
-                      "type": "number"
+                    "breakfast": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties":{
+                          "carbohidrates": {
+                            "type": "number",
+                            "description": "respective nutrition element value",
+                            "example": 8.5
+                          },
+                          "protein": {
+                            "type": "number",
+                            "description": "respective nutrition element value",
+                            "example": 2
+                          },
+                          "fat": {
+                            "type": "number",
+                            "description": "respective nutrition element value",
+                            "example": 14.7
+                          },
+                          "dish": {
+                            "type": "string",
+                            "description": "name of the dish",
+                            "example": "Avocado"
+                          },
+                          "_id": {
+                            "type": "string",
+                            "description": "id of food intake",
+                            "example": "657f48154407e426809fa649"
+                          }
+                        }
+                      }
                     }
                   }
                 },
-                "waterIntake": {
-                  "type": "number"
+                "waterIntake":{
+                  "type": "number",
+                  "description": "water-intake value in ml",
+                  "example": 1500
                 },
-                "calories": {
-                  "type": "number"
+                "calories":{
+                  "type": "number",
+                  "description": "calories value",
+                  "example": 1000
                 },
-                "weight": {
-                  "type": "number"
+                "weight":{
+                  "type": "number",
+                  "description": "user's weight as of certain date",
+                  "example": 1000
                 },
                 "_id": {
-                  "type": "string"
+                  "type": "string",
+                  "description": "id of stats object",
+                  "example": "657f46c67f454d34f0e89e30"
                 }
               }
+            },
+            "_id": {
+              "type": "string",
+              "description": "id of day object",
+              "example": "657f46c67f454d34f0e89e2f"
             }
+
           }
         }
       },
